hphp/hack/test/typecheck/new_inference/tparam_where_constraint.php.exp
File "tparam_where_constraint.php", line 10, characters 5-22:
The keys of this Map are incompatible (Typing[4110])
  File "tparam_where_constraint.php", line 3, characters 66-68:
  This is an int
  File "tparam_where_constraint.php", line 10, characters 10-14:
  It is incompatible with a string
